syntax = "proto3";

package pb;

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message DeleteTokenByIdRequest {
    int64 id = 1;
}